add authentication info to swagger doc
